plugins {
    id 'java'
}

group 'me.s3ns3iw00'
version '4.0.2'

sourceCompatibility = 1.8
targetCompatibility  = 1.8

defaultTasks 'build'

tasks.withType(JavaCompile) {
    options.encoding 'UTF-8'
}

sourceSets {
    main {
        resources {
            srcDirs "src/main/resources"
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation  'org.javacord:javacord:3.3.2'
}